<resources>
    <string name="app_name">Salat Tracker</string>
    <string name="fajr">FAJR</string>
    <string name="prayed">Prayed</string>
    <string name="prayed_late">Prayed Late</string>
    <string name="missed">Missed</string>
    <string name="zuhr">ZUHR</string>
    <string name="asr">ASR</string>
    <string name="maghrib">MAGHRIB</string>
    <string name="esha">ISHA</string>
</resources>
